Added missing terms and conditions to recruit and manage

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Home/TermsAndConditions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Home/TermsAndConditions.cshtml
@@ -5,3 +5,43 @@
 <div class="hgroup">
     <h1 class="heading-xlarge">Terms and conditions</h1>
 </div>
+
+<section class="text">
+    <p>This service is run by the Skills Funding Agency (SFA) on behalf of the Secretary of State for Business Innovation and Skills.</p>
+    <p>The system enables training organisations to advertise and manage apprenticeship vacancies and traineeship opportunities on GOV.UK on behalf of employers.</p>
+    <p>By using this service you agree to these terms and conditions.</p>
+
+    <h3 class="heading-large">
+        Our responsibilities
+    </h3>
+
+    <p>We do our best to make sure this service is constantly available, virus free and that the information we provide is accurate and complete.</p>
+
+    <p>However, the SFA accepts no liability for:</p>
+
+    <ul>
+        <li>you being unable to access the service (for example owing to excessive demand or because we’ve taken the service down for maintenance)</li>
+        <li>loss of any data</li>
+        <li>delay or failure in receiving data</li>
+        <li>indirect damages arising from you using the service or relying on its content</li>
+        <li>the content and availability of external websites that link to the service or which are linked from it</li>
+    </ul>
+</section>
+
+<section class="text">
+    <h3 class="heading-large">Your responsibilities</h3>
+
+    <p>As a provider/employer you must:</p>
+
+    <ul>
+        <li>access ‘the system’ only with a valid and authorised username and password, and solely for the purpose for which you have been provided access to the website</li>
+        <li>keep your username and password confidential</li>
+        <li>accept responsibility for all activities associated with your account. This includes ensuring that no inappropriate wording is used in any vacancies posted</li>
+        <li>ensure that any personal data (as defined under the Data Protection Act 1998) is protected, used only for the purposes for which it was obtained and disposed of appropriately</li>
+        <li>agree not to use the service for any immoral or illegal purpose</li>
+        <li>not upload any files that contain any viruses, worms, Trojan Horses and other such destruction features</li>
+    </ul>
+
+    <p>By using this service you agree to your apprenticeship/traineeship adverts being publicly accessible, including the possibility of them being displayed on partner websites.</p>
+
+</section>
