US2024: Updating copy

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/OnBoardingComplete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/OnBoardingComplete.cshtml
@@ -3,10 +3,8 @@
     ViewBag.Title = "Thank you for on-boarding.";
 }
 
-<h2>Thank you for signing up</h2>
+<h1 id="h1header" class="heading-xlarge">Thank you for signing up</h1>
 
-<strong>Now that you have verified your email address, we are able to contact you.</strong>
-<br/>
-<strong>We will notify you of when you will be able to use the new service.</strong>
-<br />
-<strong>In the mean time, please continue to create vacancies as you do now.</strong>
+<p>Thank you for signing-up to Recruit an apprentice.</p>
+<p>We will email you when you can start using the new service.</p>
+<p>In the meantime, continue to use Apprenticeship vacancies as normal.</p>
