US2005 text change on recruit dashboard Completed > Archived

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -281,7 +281,7 @@
                             <figure class="data">
                                 <p class="count">@Model.VacanciesSummary.CompletedCount</p>
                                 <figcaption>
-                                    <h2>Completed</h2>
+                                    <h2>Archived</h2>
                                 </figcaption>
                             </figure>
                         }
@@ -291,7 +291,7 @@
                                 <figure class="data">
                                     <p class="count">@Model.VacanciesSummary.CompletedCount</p>
                                     <figcaption>
-                                        <h2>Completed</h2>
+                                        <h2>Archived</h2>
                                     </figcaption>
                                 </figure>
                             </a>
