--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -20,7 +20,7 @@
         <span class="tag-live" style="width: 110px">Closed</span>
         break;
     case VacancyStatus.Completed:
-        <span class="tag-live" style="width: 110px">Completed</span>
+        <span class="tag-live" style="width: 110px">Archived</span>
         break;
     case VacancyStatus.Withdrawn:
         <span class="tag-live" style="width: 110px">Withdrawn</span>
