DE235: refactor vacancy authorisation code to use Vacancy domain object (cleaner).

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
@@ -2,7 +2,7 @@
 
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
-    ViewBag.Title = "Recruit an Apprentice - Vertify Email";
+    ViewBag.Title = "Recruit an Apprentice - Verify Email";
 }
 
 <h1 id="accountCreated" class="heading-xlarge">Verify email</h1>
