--- a/src/SFA.Apprenticeships.Web.Recruit/Views/EmployerApplication/ViewAnonymised.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/EmployerApplication/ViewAnonymised.cshtml
@@ -3,7 +3,7 @@
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
 @using SFA.Apprenticeships.Web.Recruit.Constants
 
-@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.AnonymisedApplicationViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - View application";
@@ -16,7 +16,7 @@
     </div>
     <div class="grid-wrapper">
         <div class="grid grid-2-3">
-            @*@Html.DisplayFor(m => m.ApplicantDetails, ApplicantDetailsViewModel.PartialView)*@
+            @Html.DisplayFor(m => m.AnonymousApplicantDetails, AnonymisedApplicantDetailsViewModel.PartialView)
         </div>
         <div class="grid grid-1-3">
         </div>
