--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Report/CandidatesWithApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Report/CandidatesWithApplications.cshtml
@@ -32,7 +32,7 @@
             <button id="ValidateReportParameters" type="submit" class="button" name="CandidatesWithApplications" value="ValidateCandidatesWithApplications">Export CSV</button>
             @if (Model.IsValid)
             {
-                <button id="DownloadReport" type="submit" class="button-link" name="CandidatesWithApplications" value="DownloadCandidatesWithApplications">Download CSV</button>
+                <button id="DownloadReport" type="submit" class="button-link hidden" name="CandidatesWithApplications" value="DownloadCandidatesWithApplications">Download CSV</button>
                 <noscript>
                     <button id="DownloadReportNoJs" type="submit" class="button-link" name="CandidatesWithApplications" value="DownloadCandidatesWithApplications">Download CSV</button>
                 </noscript>
