--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -17,3 +17,9 @@
         <a href="">Withdraw this @vacancyTypeText</a>
     </p>-->
 }
+@if (Model.Status.CanShareApplications())
+{
+    <p class="small-btm-margin">
+        @Html.RouteLink("Show applications", RecruitmentRouteNames.ShareApplications, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
+    </p>
+}
