us2029: WIP - anoymised view and link from applications page

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/AnonymisedApplicantDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/AnonymisedApplicantDetails.cshtml
@@ -4,6 +4,7 @@
 <section class="inner-block-padr">
     <div class="panel-indent">
         <ul class="list-text">
+            <li><span class="">Applicant ID:</span></li>
             <li>@Model.ApplicantId</li>
         </ul>
     </div>
